--- a/src/components/Header/components/LanguageSelectButton/LanguageSelectButton.css
+++ b/src/components/Header/components/LanguageSelectButton/LanguageSelectButton.css
@@ -7,3 +7,9 @@
 	color: var(--color-text);
 	transition: border-color 0.3s ease;
 }
+
+@media (max-width: 600px) {
+	.language-select {
+		padding: 0.2rem 0.2rem;
+	}
+}
