--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@
 		flex-direction: column;
 		align-items: center;
 		gap: 0.3rem;
-		padding: 0.5rem 1rem; /* opcional para dar espaçamento lateral */
+		padding: 0.5rem 1rem;
 	}
 
 	.header__logo-container {
@@ -46,7 +46,7 @@
 
 	.header__title {
 		font-size: 1.4rem;
-		margin-left: 0; /* tira a margem lateral quando fica centralizado */
+		margin-left: 0;
 		text-align: center;
 	}
 
@@ -57,7 +57,6 @@
 	}
 }
 
-/* Ajuste extra para telas muito pequenas, tipo celular */
 @media (max-width: 350px) {
 	.header__title {
 		font-size: 1.2rem;
